--- a/flask_app/templates/notes.html
+++ b/flask_app/templates/notes.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,20 +12,20 @@
     <body>
         <nav>
             <a href="{{ url_for('index') }}"> Home</a> ||
-            <a href="{{ url_for('get_notes') }}"> My Notes</a>
-
+            <a href="{{ url_for('get_notes') }}"> My Notes</a> ||
+            <a href="{{url_for('new_note') }}">Add Note</a>
         </nav>
-        <h1>Welcome {{user.name}} to the 49er Notes App!</h1>
         <h1>Listing notes</h1>
 
         <table>
             <tr>
+                <h1>Welcome {{user.name}} to the 49er Notes App!</h1>
                 <th>Title</th>
                 <th>Date</th>
             </tr>
             {% for key, value in notes.items() %}
             <tr>
-                <td><a href="{{ url_for('get_note', note_id=key) }}">{{ value.title }}</a></td>
+                <td><a href="notes/{{key}}">{{ value.title }}</a></td>
                 <td>{{ value.date }}</td>
             </tr>
             {% endfor %}
