--- a/flask_app/templates/note.html
+++ b/flask_app/templates/note.html
@@ -9,6 +9,8 @@
         <title>UNCC Notes App - View your Note</title>
         <!-- styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='forms.css') }}">
+
     </head>
     <body>
         <nav>
@@ -16,7 +18,7 @@
             <a href="{{ url_for('get_notes') }}"> My Notes</a> ||
             <a href="{{url_for('new_note') }}">Add Note</a>
         </nav>
-        <h1>Welcome {{user.first_name}} to the 49er Notes App!</h1>
+        <h1>Welcome {{user}} to the 49er Notes App!</h1>
         <h1>Note detials</h1>
 
         <table>
@@ -31,5 +33,25 @@
                 <td>{{ note.date }}</td>
             </tr>
         </table>
+        
+        {% if note.comments %}
+        {% if note.comments|length > 0 %}
+        <h2>Comments</h2>
+        <ul>
+        {% for comment in note.comments %}
+            <li>{{ comment.content }}</li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+        {% endif %}
+        <form action="{{ url_for('new_comment', note_id=note.id) }}" method="post">
+        <div class="formwrapper">
+        <h2 class="title">Add a comment</h2>
+        <div class="form-field">
+            {{ form.comment.label }} <br/> {{ form.comment }}
+        </div>
+        {{ form.submit }}
+        </div>
+        </form>
     </body>
 </html>
